Merge kayttooikeus-service into one maven module